--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,24 +1,37 @@
-name: Deploy Backend with spring boot
+name: Deploy Backend with Spring Boot
 
 on:
-    push:
-      branches: [main]
-    pull_request:
-      branches: [main]
-      types: [opened, synchronize]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs:
-    deploy:
-       
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v2
-            with:
-              fetch-depth: 0
-          - name: Deploy with Railway
-            if: ${{ github.event_name == 'push' }}
-            uses: bervProject/railway-deploy@main
-            with:
-              railway_token: f6fd8c46-09a4-4a1d-b6e1-e6cdc6b888c0
-              service: "rest-api-book"
-              detach: true
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
+  deploy:  
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Deploy with Railway
+        if: ${{ github.event_name == 'push' }}
+        uses: bervProject/railway-deploy@main
+        with:
+          railway_token: f6fd8c46-09a4-4a1d-b6e1-e6cdc6b888c0
+          service: "rest-api-book"
+          detach: true
+
