--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,26 +8,14 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
   deploy:  
-    needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Deploy with Railway
         if: ${{ github.event_name == 'push' }}
         uses: bervProject/railway-deploy@main
@@ -35,4 +23,5 @@ jobs:
           railway_token: ${{ secrets.RAILWAY_TOKEN }}
           service: "rest-api-book"
           detach: true
+
 
