--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,14 +8,26 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  deploy:  
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
+  deploy:  
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: Deploy with Railway
         if: ${{ github.event_name == 'push' }}
         uses: bervProject/railway-deploy@main
@@ -23,5 +35,4 @@ jobs:
           railway_token: ${{ secrets.RAILWAY_TOKEN }}
           service: "rest-api-book"
           detach: true
-
 
