--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=RestApiBook
 server.port=8081
 #propiedad para creacion a partir de codigo
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 
 #dialecto para que hibernate se comunique con la base de datos
