--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,13 @@ spring.jpa.hibernate.ddl-auto = update
 
 #dialecto para que hibernate se comunique con la base de datos
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.datasource.url=jdbc:mysql://localhost:3306/rest_api_book
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_api_book
 
 #Conexion a MySQL en la nube con railway
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:42712/railway
+#spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:42712/railway
 spring.datasource.username=root
-spring.datasource.password=hZihUNdWEnYhvYPWxWjhiRxYZjHyqOhc
+#spring.datasource.password=hZihUNdWEnYhvYPWxWjhiRxYZjHyqOhc
+spring.datasource.password=root
 
 #propiedades para mostrar las sentencias sql
 spring.jpa.show-sql=true
